Use virtual threads for tool executions.